--- a/ui.html
+++ b/ui.html
@@ -1,3 +1,8 @@
+<!-- ローディング画面 -->
+<div id="loading">
+  <div class="spinner"></div>
+</div>
+
 <h3>Figma to SpreadSheet</h3>
 
 <div class="form-group">
@@ -18,6 +23,69 @@
 <button id="submit">同期する</button>
 
 <style>
+  /* ローディング画面 */
+  #loading {
+    width: 100vw;
+    height: 100vh;
+    transition: all 1s;
+    background-color: #0bd;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+  }
+  .spinner {
+    width: 100px;
+    height: 100px;
+    margin: 200px auto;
+    background-color: #fff;
+    border-radius: 100%;
+    animation: sk-scaleout 1.0s infinite ease-in-out;
+  }
+  /* ローディングアニメーション */
+  @keyframes sk-scaleout {
+    0% {
+      transform: scale(0);
+    } 100% {
+      transform: scale(1.0);
+      opacity: 0;
+    }
+  }
+  
+
+  .loader {
+    align-items: center;
+    background: #fff;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    left: 0;
+    position: fixed;
+    right: 0;
+    top: 0;
+    z-index: 999;
+  }
+  .loader::after {
+    animation: loader 0.5s linear infinite;
+    border: 1px solid orange;
+    border-radius: 50%;
+    border-right: 1px solid rgba(orange, 0.2);
+    border-top: 1px solid rgba(orange, 0.2);
+    content: "";
+    height: 70px;
+    width: 70px;
+  }
+
+  @keyframes loader {
+    0% {
+      transform: rotate(0);
+    }
+
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
   label {
     font-size: 12px;
     color: #909090;
@@ -44,6 +112,18 @@
 </style>
 
 <script>
+
+hideLoading()
+
+function showLoading() {
+  const loader = document.getElementById('loading')
+  loader.style.display = 'block'
+}
+
+function hideLoading() {
+  const loader = document.getElementById('loading')
+  loader.style.display = 'none'
+}
 
 document.getElementById('submit').onclick = () => {
   const fileKey = document.getElementById('fileKey').value;
@@ -78,9 +158,9 @@ onmessage = (event) => {
   }
 
   if(getSheet != null) {
+    //TODO: 
     (async () => {
       let response = await fetch(GASUrl);
-
       let commits = await response.json(); // レスポンスの本文を読み JSON としてパースする
       console.log(commits)
     })()
@@ -93,6 +173,7 @@ onmessage = (event) => {
         sheetName: 'シート1',
         data: postSheet,
       }
+      showLoading()
       let response = await fetch(GASUrl, {
         method: 'POST', // *GET, POST, PUT, DELETE, etc.
         mode: 'no-cors', // no-cors, *cors, same-origin
@@ -107,6 +188,7 @@ onmessage = (event) => {
         body: JSON.stringify(data) // 本文のデータ型は "Content-Type" ヘッダーと一致する必要があります
       })
       console.log(response)
+      hideLoading()
     })()
   }
   
