--- a/ui.html
+++ b/ui.html
@@ -181,7 +181,7 @@ onmessage = (event) => {
     (async () => {
       const data = {
         sheetId: spreadSheetId,
-        sheetName: 'シート1', //TODO
+        sheetName: spreadSheetName,
         data: postSheet,
       }
       console.log(data)
